# cheb-rs

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
src/: cheb_points.rs  interpolation.rs  lib.rs  types.rs
